Fix for too big font used in login field

--- a/pos/client/style/login.css
+++ b/pos/client/style/login.css
@@ -53,7 +53,7 @@
     background-color: white;
     border-radius: 6px;
     color: black;
-    font-size: 4em;
+    font-size: 3em;
     height: 60px;
     left: 40px;
     padding-left: 20px;
